--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neon Glass Music Player</title>
+    <title>Bajao Behenchod</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -699,7 +699,7 @@
     <div class="player glass">
         <!-- Header with recent tracks -->
         <div class="player-header">
-            <h1 class="player-title"><i class="fas fa-music"></i> Neon Player</h1>
+            <h1 class="player-title"><i class="fas fa-music"></i>Bajao Behenchod</h1>
             <div class="recent-tracks" id="recentTracks">
                 <!-- Recent tracks will be added dynamically -->
             </div>
